# BacPP

./: .gitignore  README.md  bacpp.py  bacpp.yml  bpp.py  bpp.yml  main.py  pyproject.toml
example/outputs/: extracted_features.csv  predictions.csv
example/outputs/images/: pca3_positions_interactive.html
models/: XGBoost.json
paper/: paper.bib  paper.md
src/bpp/: cli.py
