[tool.poetry]
name = "bpp"
version = "0.1.0"
description = "Bacterial polyploidy predictor: GC/AT skew features + kNN/LogReg/XGBoost with optional CheckM2 QC"
authors = ["Zhenxiong Jiang <jiangz1@ufl.edu>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "bpp" }]

include = [
  { path = "bpp/models/*.json", format = "wheel" },
  { path = "bpp/models/*.json", format = "sdist" },
  { path = "example/*", format = "sdist" },
  { path = "paper/*",   format = "sdist" },
  { path = "bpp.yml",   format = "sdist" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.24"
pandas = "^2.0"
matplotlib = "^3.8"
plotly = "^6.0"
xgboost = version = "^2.0"

[tool.poetry.scripts]
bpp = "bpp.cli:main"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
