[tool.poetry]
name = "bpp"
version = "0.1.2"
description = "Bacterial polyploidy predictor: GC/AT skew features + kNN/LogReg/XGBoost with optional CheckM2 QC"
authors = ["Zhenxiong Jiang <jiangz1@ufl.edu>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "bpp", from = "src" }]

include = [
  "src/bpp/models/*.json",  # Always package models
  "bpp.yml",                # Conda environment file
  "example/*",              # Include example data
  "paper/*"                 # Include manuscript figures/data
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.24"
pandas = "^2.0"
matplotlib = "^3.8"
plotly = "^6.0"
xgboost = "^2.0"
scikit-learn = "^1.5"

[tool.poetry.scripts]
bpp = "bpp.cli:main"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
